--- a/Testbed/Testbed.iOS/packages.config
+++ b/Testbed/Testbed.iOS/packages.config
@@ -1,30 +1,31 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ExternalStorageBuddy" version="1.0.3" targetFramework="xamarinios10" />
+  <package id="ExternalStorageBuddy" version="1.0.4" targetFramework="xamarinios10" />
   <package id="FilenameBuddy" version="2.0.8" targetFramework="xamarinios10" />
-  <package id="FontBuddy" version="2.0.6" targetFramework="xamarinios10" />
-  <package id="GameTimer" version="2.0.0" targetFramework="xamarinios10" />
-  <package id="HadoukInput" version="2.0.27" targetFramework="xamarinios10" />
-  <package id="InputHelper" version="2.0.6" targetFramework="xamarinios10" />
+  <package id="FontBuddy" version="2.0.18" targetFramework="xamarinios10" />
+  <package id="GameTimer" version="2.1.0" targetFramework="xamarinios10" />
+  <package id="HadoukInput" version="2.0.32" targetFramework="xamarinios10" />
+  <package id="InputHelper" version="2.0.11" targetFramework="xamarinios10" />
   <package id="MatrixExtensions" version="2.0.0" targetFramework="xamarinios10" />
-  <package id="MenuBuddy" version="2.0.48" targetFramework="xamarinios10" />
-  <package id="Microsoft.Net.Compilers.Toolset" version="3.3.1" targetFramework="xamarinios10" developmentDependency="true" />
-  <package id="Microsoft.NETCore.Platforms" version="3.1.0" targetFramework="xamarinios10" />
+  <package id="MenuBuddy" version="2.0.82" targetFramework="xamarinios10" />
+  <package id="Microsoft.Net.Compilers.Toolset" version="3.7.0" targetFramework="xamarinios10" developmentDependency="true" />
+  <package id="Microsoft.NETCore.Platforms" version="3.1.3" targetFramework="xamarinios10" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="xamarinios10" />
   <package id="MonoGame.Framework.iOS" version="3.7.1.189" targetFramework="xamarinios10" />
-  <package id="MonogameScreenTools" version="2.0.12" targetFramework="xamarinios10" />
-  <package id="MouseBuddy" version="2.0.2" targetFramework="xamarinios10" />
+  <package id="MonogameScreenTools" version="2.0.13" targetFramework="xamarinios10" />
+  <package id="MouseBuddy" version="2.0.4" targetFramework="xamarinios10" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="xamarinios10" />
   <package id="Plugin.Permissions" version="3.0.0.12" targetFramework="xamarinios10" />
-  <package id="PrimitiveBuddy" version="2.0.0" targetFramework="xamarinios10" />
-  <package id="RandomExtensions.dmanning23" version="2.0.0" targetFramework="xamarinios10" />
-  <package id="ResolutionBuddy" version="2.0.1" targetFramework="xamarinios10" />
-  <package id="ShareBuddy" version="2.0.9" targetFramework="xamarinios10" />
+  <package id="PrimitiveBuddy" version="2.0.1" targetFramework="xamarinios10" />
+  <package id="RandomExtensions.dmanning23" version="2.0.1" targetFramework="xamarinios10" />
+  <package id="ResolutionBuddy" version="2.0.4" targetFramework="xamarinios10" />
+  <package id="ShareBuddy" version="2.0.12" targetFramework="xamarinios10" />
   <package id="SixLabors.Core" version="1.0.0-dev000141" targetFramework="xamarinios10" />
-  <package id="SixLabors.ImageSharp" version="1.0.0-dev003153" targetFramework="xamarinios10" />
-  <package id="StateMachineBuddy" version="2.0.19" targetFramework="xamarinios10" />
+  <package id="SixLabors.ImageSharp" version="1.0.1" targetFramework="xamarinios10" />
+  <package id="SpriteFontPlus.MonoGame" version="0.7.0.22" targetFramework="xamarinios10" />
+  <package id="StateMachineBuddy" version="2.0.21" targetFramework="xamarinios10" />
   <package id="System.AppContext" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Buffers" version="4.5.0" targetFramework="xamarinios10" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="xamarinios10" />
   <package id="System.Collections" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Console" version="4.3.1" targetFramework="xamarinios10" />
@@ -40,7 +41,7 @@
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Linq" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="System.Memory" version="4.5.3" targetFramework="xamarinios10" />
+  <package id="System.Memory" version="4.5.4" targetFramework="xamarinios10" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="xamarinios10" />
   <package id="System.Net.Primitives" version="4.3.1" targetFramework="xamarinios10" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="xamarinios10" />
@@ -51,7 +52,7 @@
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Runtime" version="4.3.1" targetFramework="xamarinios10" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.0" targetFramework="xamarinios10" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="xamarinios10" />
   <package id="System.Runtime.Extensions" version="4.3.1" targetFramework="xamarinios10" />
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="xamarinios10" />
@@ -69,8 +70,8 @@
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="xamarinios10" />
   <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="xamarinios10" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="xamarinios10" />
-  <package id="ToastBuddyLib" version="2.0.1" targetFramework="xamarinios10" />
-  <package id="TouchScreenBuddy" version="2.0.6" targetFramework="xamarinios10" />
+  <package id="ToastBuddyLib" version="2.0.9" targetFramework="xamarinios10" />
+  <package id="TouchScreenBuddy" version="2.0.9" targetFramework="xamarinios10" />
   <package id="Vector2Extensions" version="2.0.2" targetFramework="xamarinios10" />
   <package id="Xam.Plugin.DeviceInfo" version="4.1.1" targetFramework="xamarinios10" />
   <package id="XmlBuddy" version="2.0.1" targetFramework="xamarinios10" />
